--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: 'Mulish', sans-serif;
     font-family: 'Open Sans', sans-serif;
+    color: white;
 }
 .container{
     width: 100%;
@@ -12,14 +13,18 @@
         rgba(0, 83, 161, 0.95)
       ), url('https://images.unsplash.com/photo-1470058869958-2a77ade41c02?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80https://images.unsplash.com/photo-1541417904950-b855846fe074?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=841&q=80');
 }
-.title h1{
-    color: white;
+.title h1,h2{
     letter-spacing: 0.2em;
     word-spacing: 0.5em;
     padding: 20px;
+    font-size: 45px;
     font-weight: bolder;
     text-align: center;
-
+    line-height: 0;
+}
+.title h2{
+    font-size: 15px;
+    margin-bottom: 50px;
 }
 .header{
     display: flex;
@@ -35,4 +40,26 @@ input{
     padding-left: 50px;
     padding-left: 50px;
     box-shadow: 5px 13px 5px #0000005b;
+}
+.content{
+    display: flex;
+    justify-content: space-around;
+}
+.column-1{
+    text-align: center;
+    font-size: 35px;
+}
+.column-2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+.item{
+    font-size: 20px;
+    padding: 50px;
+    text-align: center;
+}
+.item-title{
+    padding: 5px;
+    
 }
