--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 }
 .title h2{
     font-size: 15px;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
 }
 .header{
     display: flex;
@@ -41,6 +41,7 @@ input{
     padding-left: 50px;
     padding-left: 50px;
     box-shadow: 5px 13px 5px #0000005b;
+    margin-bottom: 10px;
 }
 .content{
     display: flex;
@@ -57,11 +58,16 @@ input{
 
 }
 .item{
-    font-size: 20px;
+    font-size: 18px;
     padding: 50px;
     text-align: center;
 }
 .item-title{
+    font-size: 25px;
     padding: 5px;
     font-weight: bolder;
+}
+
+i{
+    color: white;
 }
