--- a/style.css
+++ b/style.css
@@ -85,3 +85,13 @@ p{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 0.05em;
+    font-size: smaller;
+    color: rgba(255, 255, 255, 0.377);
+}
