--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
         rgba(0, 83, 161, 0.95)
       ), url('https://images.unsplash.com/photo-1470058869958-2a77ade41c02?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80https://images.unsplash.com/photo-1541417904950-b855846fe074?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=841&q=80');
 }
+.title{
+    margin-top:5px;
+}
 .title h1,h2{
     letter-spacing: 0.2em;
     word-spacing: 0.5em;
@@ -24,7 +27,7 @@
 }
 .title h2{
     font-size: 15px;
-    margin-bottom:0px;
+    margin-top:10px;
 }
 .header{
     display: flex;
